--- a/views/pagini/index.ejs
+++ b/views/pagini/index.ejs
@@ -49,10 +49,15 @@
 		<%- include("../fragmente/header") %>
 
 		<%- include("../fragmente/navbar") %>
+
+		
 		<main>
 			
+
 			<section id="g1">
 				<p>Bun venit la cinematograful <b>FilmulTau</b>. Locul unde magia se intampla.</p>
+				<button id="schimbare-tema">Apasa aici pentru a schimba tema</button>
+				<script src="/resources/JS/tema.js"></script>
 			</section>
 			<section id="g2">
 				<section id="orar">
