--- a/resources/css/nav.css
+++ b/resources/css/nav.css
@@ -10,7 +10,7 @@ nav {
   width: 100%;
   top: 0;
   padding: 0;
-  background: purple;
+  background: var(--navbg);
   position: sticky;
 }
 
@@ -32,7 +32,7 @@ nav li {
 nav ul.meniu li {
   text-align: center;
   list-style-type: none;
-  background: purple;
+  background: var(--navbg);
   cursor: pointer;
 }
 
