--- a/views/pagini/prezentare.ejs
+++ b/views/pagini/prezentare.ejs
@@ -44,8 +44,12 @@
 	
 	<%- include("../fragmente/header") %>
     <%- include("../fragmente/navbar") %>
-    <main>
 
+	<button id="schimbare-tema"><i class="far fa-moon"></i><i class="far fa-sun"></i></button>
+	<script src="/resources/JS/tema.js"></script>
+
+    <main>
+		
         <section>
 
             <%- include("../fragmente/galerie-statica") %>
