updated button for the prezentare page

--- a/views/pagini/prezentare.ejs
+++ b/views/pagini/prezentare.ejs
@@ -45,7 +45,7 @@
 	<%- include("../fragmente/header") %>
     <%- include("../fragmente/navbar") %>
 
-	<button id="schimbare-tema"><i class="far fa-moon"></i><i class="far fa-sun"></i></button>
+	<button id="schimbare-tema" class="light"><i class="far fa-moon" id="butonluna"></i><i class="far fa-sun" id="butonsoare"></i></button>
 	<script src="/resources/JS/tema.js"></script>
 
     <main>
