--- a/views/fragmente/navbar.ejs
+++ b/views/fragmente/navbar.ejs
@@ -25,7 +25,7 @@
         <li><div class="mainOption">Despre Noi</div>
             <ul>                        
                 <li class="dropdown"><a href="prezentare" class="suboption">Prezentare</a></li>
-                <li class="dropdown"><a href="TBD" class="suboption">Scop</a></li>
+                <li class="dropdown"><a href="filme" class="suboption">Filme</a></li>
                 <li class="dropdown"><a href="TBD" class="suboption">Locatii</a></li>
                 <li class="dropdown"><a href="TBD" class="suboption">Galerie</a></li>
             </ul>
