--- a/views/pagini/filme.ejs
+++ b/views/pagini/filme.ejs
@@ -53,7 +53,8 @@
 		
         
 		
-        <label> Maxim pret: <input type="number" id="inp-pret" value="100"></label>
+        <label> Durata maxima: <input type="number" id="inp-durata" value="300"></label>
+        <label> Pret minim: <input type="range" id="inp-pret" value="0" min="0"  max="100"></label>
 		<label>Select simplu:
             <select id="inp-categorie">
                 <option value="toate">toate</option>
