--- a/resources/css/filme.css
+++ b/resources/css/filme.css
@@ -16,7 +16,7 @@ main{
 }
 
 .grid-produse .produs h3{
-    background-color: var(--culoare-roz-inchis);
+    background-color: var(--secBanner);
     text-align: center;
     margin-top: 0;
     padding-top: 0.5rem;
@@ -37,7 +37,7 @@ main{
 }
 .grid-produse .produs .info-prod{
     display:flex;
-    background-color: var(--cl-marcare);
+    background-color: var(--bannerColor);
 }
 .grid-produse .produs .info-prod p{
     width:30%;
@@ -52,7 +52,7 @@ main{
 }
 
 .info-produse{
-    background-color: var(--cl-marcare);
+    background-color: var(--bannerColor);
     padding:0.2rem;
     box-shadow: 0px 0px 0.5rem 0.15rem grey;
 }
