--- a/views/pagini/filme.ejs
+++ b/views/pagini/filme.ejs
@@ -69,9 +69,12 @@
 			<button id="sortCrescNume">Sorteaza crescator dupa nume</button>
 			<button id="sortDescrescNume">Sorteaza descrescator dupa nume</button>
 			<button id="resetare">Reseteaza</button>
+			<button id="suma">Afiseaza suma biletelor filmelor selectate</button>
 		</p>
 
-		<p id="p-suma">Apasați Alt+"c" pentru suma preturilor biletelor la filmele afișate. </p>
+		<div id="newgrid">
+		<p id="p-suma"></p>
+		
 
 
 
@@ -94,7 +97,7 @@
                 <% }%>
             </div>
         </section>
-
+		</div>
     </main>
    
     
