--- a/views/pagini/filme.ejs
+++ b/views/pagini/filme.ejs
@@ -91,6 +91,16 @@
 		<input type="checkbox" id="filme2" name="Filme vechi" value="Filme vechi">
 		<label for="filme2"> Filme vechi</label><br>
 		</div>
+
+		<div class="radiobutton">
+		<input type="radio" id="treid" name="tip-film" value="treid">
+		<label for="treid">3D</label><br>
+		</div>
+
+		<div class="radiobutton">
+		<input type="radio" id="clasic" name="tip-film" value="clasic">
+		<label for="clasic">Clasic</label><br>
+		</div>
 		<p>
 			<button id="filtrare">Filtreaza</button>
 			<button id="sortCrescNume">Sorteaza crescator dupa pret si categorie</button>
