Finished radio button

--- a/views/pagini/filme.ejs
+++ b/views/pagini/filme.ejs
@@ -125,7 +125,8 @@
                             <p class="pret"><b>Pret</b>: <span class="val-pret"  style="color:red"><%- prod.pret%></span></p>
                             <p class="durata"><b>Durata filmului</b>: <span class="val-durata" style="color:red"><%- prod.durata_minute%></span></p>
                             <p class="varsta"><b>Varsta minima pentru vizionare</b>: <span class="val-varsta"  style="color:red"><%- prod.varsta_minima%></span></p>
-                        </div>
+							<p class="hidden"><b>3D</b>: <span class="val-treid"  style="color:red"><%- prod.treid%></span></p>	
+						</div>
                         <p class="categorie"><b>Categorie</b>:<span class="val-categorie"><%- prod.categorie%></span></p>
                         <figure>
                             <img src="/resources/galerie/filme/<%-prod.imagine%>" style="width:50%;height:auto;" alt="[imagine <%- prod.nume %>]" />
