changed simple select

--- a/views/pagini/filme.ejs
+++ b/views/pagini/filme.ejs
@@ -58,9 +58,8 @@
 		<label>Select simplu:
             <select id="inp-categorie">
                 <option value="toate">toate</option>
-                <% for( let categorie of locals.categorii) { %>
-                    <option value="<%- categorie.categ %>"><%- categorie.categ %></option>
-                <% } %>
+                <option value="clasice">clasice</option>
+				<option value="3D">3D</option>
             </select>
         </label>
 		
