--- a/views/pagini/filme.ejs
+++ b/views/pagini/filme.ejs
@@ -65,11 +65,13 @@
 		
 		<label>Nume: <input type="text" id="input-nume" value=""></label>
 		</div>
+		
+		<div class="ceva">
 		<label for="textarea">Introduceti actorul preferat:</label>
 		<textarea id="input-actor" name="textarea" rows="4" cols="50">
-		
 		</textarea>
-		
+		</div>
+
 		<label> Selectati varstele persoanelor din grupul dumneavoastra de prieteni:
 
 			<select id="inp-multiplu" multiple>
@@ -80,8 +82,9 @@
 			</select>	
 		</label>
 		
+		
 		<p>Selectati tipul de film care va pasioneaza</p>
-
+		<div class="ceva">
 		<div class="check">
 		<input type="checkbox" id="filme1" name="Filme noi" value="Filme noi">
 		<label for="filme1"> Filme noi</label><br>
@@ -92,10 +95,11 @@
 		<label for="filme2"> Filme vechi</label><br>
 		</div>
 
-		
+		</div>
 
 		<p>Vreti ca filmul sa-l aiba pe Vin Diesel?</p>
 
+		<div class="ceva">
 		<div class="radiobutton">
 		<input type="radio" id="da" name="radio1" value="da">
 		<label for="treid">Da</label><br>
@@ -112,9 +116,10 @@
 		<label for="oricare">Nu ma prea intereseaza</label><br>
 		</div>
 
-		
+		</div>
 		<p>Vreti ca filmul sa-l aiba pe LeBron James?</p>
 
+		<div class="ceva">
 		<div class="radiobutton">
 		<input type="radio" id="da" name="radio2" value="da">
 		<label for="treid">Da</label><br>
@@ -131,9 +136,10 @@
 		<label for="oricare">Nu ma prea intereseaza</label><br>
 		</div>
 
-
+		</div>
 		<p>Vreti ca filmul sa o aiba pe Michelle Rodriguez?</p>
 
+		<div class="ceva">
 		<div class="radiobutton">
 		<input type="radio" id="da" name="radio3" value="da">
 		<label for="treid">Da</label><br>
@@ -150,8 +156,10 @@
 		<label for="oricare">Nu ma prea intereseaza</label><br>
 		</div>
 
+		</div>
 		<p>Vreti ca filmul sa-l aiba pe Lewis Tan?</p>
 
+		<div class="ceva">
 		<div class="radiobutton">
 		<input type="radio" id="da" name="radio4" value="da">
 		<label for="treid">Da</label><br>
@@ -168,8 +176,10 @@
 		<label for="oricare">Nu ma prea intereseaza</label><br>
 		</div>
 
+		</div>
 		<p>Vreti ca filmul sa-l aiba pe Tom Cruise?</p>
 
+		<div class="ceva">
 		<div class="radiobutton">
 		<input type="radio" id="da" name="radio5" value="da">
 		<label for="treid">Da</label><br>
@@ -186,6 +196,7 @@
 		<label for="oricare">Nu ma prea intereseaza</label><br>
 		</div>
 
+		</div>
 		<p>
 			<button id="filtrare">Filtreaza</button>
 			<button id="sortCrescNume">Sorteaza crescator dupa pret si categorie</button>
